--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <p>Our team of talented chefs is committed to delivering an exceptional dining experience, combining traditional recipes with modern culinary techniques. We invite you to join us at Bella Vista and indulge in the rich flavors of Italy while enjoying our warm hospitality.</p>
                     </div>
                     <div class="about-image">
-                        <img src="images/restaurant.jpg" alt="Bella Vista Restaurant Interior">
+                        <img src="./restaurant.jpg" alt="Bella Vista Restaurant Interior">
                     </div>
                 </div>
             </div>
